# wasmslime

./: Cargo.toml  README.md  index.html
src/: main.rs
src/model/: cell.rs  config.rs  mod.rs  plane.rs  point.rs  simulation.rs  trail_map.rs
