[package]
name = "yapp"
version = "0.1.0"
authors = ["tristangodfrey <tristan@godfrey.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.18.0", features = ["web-sys"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.6" , features = ["wasm-bindgen"]}

[dependencies.web-sys]
features = [
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'Element',
    'Document',
    'Window',
    'ImageData'
]
